--- a/public/client.html
+++ b/public/client.html
@@ -18,6 +18,8 @@
             <input type="text" autocomplete="off" id="player-name" placeholder="Enter your name">
             <button onclick="setName()">Play</button>
         </div>
+        <button class="how-to-play-btn" onclick="howToPlay()">How to play</button>
+        <button class="leaderboard-btn" onclick="leaderBoard()">Leaderboard</button>
     </div>
 
     <div id="lobby" style="display: none;">
@@ -34,7 +36,7 @@
             <div class="player-list" id="player-list"></div>
         </div>
     </div>
-
+    
     <!-- Game Screen -->
     <div id="game-screen" style="display: none;">
         <!-- <h1>Game</h1> -->
