--- a/public/client.html
+++ b/public/client.html
@@ -6,10 +6,13 @@
     <title>Guardian of the Typurr - Lobby</title>
     <script src="https://cdn.socket.io/4.0.1/socket.io.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="./images/favicon.png">
     <script src="script.js"></script>
     <script src="stars.js"></script>
     <script src="leaderboard.js"></script>
+    <script src="followBox.js"></script>
 </head>
 <body>
     <div id="name-form">
@@ -17,21 +20,21 @@
         <h1>Guardian of the Typurr</h1>
         <div class="name-and-play-container">
             <input type="text" autocomplete="off" id="player-name" placeholder="Enter your name">
-            <button onclick="setName()">Play</button>
+            <button onclick="setName(), playSoundClick()">Play</button>
         </div>
-        <button class="how-to-play-btn" onclick="openHowToPlay()">How to play</button>
-        <button class="leaderboard-btn" onclick="openLeaderboard()">Leaderboard</button>
+        <button class="how-to-play-btn" onclick="openHowToPlay(), playSoundClick()">How to play</button>
+        <!-- <button class="leaderboard-btn" onclick="openLeaderboard(), playSoundClick()">Leaderboard</button> -->
     </div>
     
     <div id="lobby" style="display: none;">
         <h1>Lobby</h1>
-        <button id="create-room-btn" onclick="createRoom()">Create Room</button>
+        <button id="create-room-btn" onclick="createRoom(), playSoundClick()">Create Room</button>
         <div class="room-container" id="room-list"></div>
 
         <div id="game-room">
             <h2 id="room-title"></h2>
             <div class="ready-and-exit-btns">
-                <button id="exit-button" onclick="exitRoom()">Exit Room</button>
+                <button id="exit-button" onclick="exitRoom(), playSoundClick()">Exit Room</button>
                 <button id="ready-button" onclick="readyUp()">Ready</button>
             </div>
             <div class="player-list" id="player-list"></div>
@@ -48,14 +51,14 @@
         <div id="game-over-screen" style="display: none;">
             <h2>Game Over!</h2>
             <p id="countdown"></p>
-            <button id="return-to-lobby-button" onclick="returnToLobby()">Return to Lobby</button>
+            <button id="return-to-lobby-button" onclick="returnToLobby(), playSoundClick()">Return to Lobby</button>
         </div>
     </div>
 
     <!-- How to Play Modal -->
-    <div ondblclick="closeHowToPlay()" id="howToPlayModal" class="modal hidden">
+    <div ondblclick="closeHowToPlay(), playSoundClick()" id="howToPlayModal" class="modal hidden">
         <div class="modal-content">
-            <span class="close-button" onclick="closeHowToPlay()">&times;</span>
+            <span class="close-button" onclick="closeHowToPlay(), playSoundClick()">&times;</span>
             <img src="./images/Logo1.png" alt="Game Logo" class="modal-logo">
             <p class="description">Guardian of the Typurr is a fast-paced multiplayer typing game where you play cats and delete aliens. Type fast, survive longer, and reach high waves!</p>
             <div class="gif-section">
@@ -64,66 +67,66 @@
             </div>
             <div class="character-section">
                 <h3>Characters</h3>
-                <p class="description">You can choose to play as one of these 7 cats, each having their unique abilities-command! Execute abilities by typing in commands using " / "</p>
+                <p class="description">You can choose to play as one of these 7 cats, each having their unique abilities-command! Execute abilities by typing in commands using " / ", each ability has 30s cooldown.</p>
                 <div class="characterM white bg-color-Nulla">
                     <img src="./images/cats/NullaTN1.png" alt="Nulla">
                     <h3 class="name-Nulla">Nulla</h3>
-                    <h4>[The Purity Cat]</h4>
+                    <h4>[ The Purity Cat ]</h4>
                     <p>No power, default cat</p>
                 </div>
                 <div class="characterM purple bg-color-Jacky">
                     <img src="./images/cats/JackyTN1.png" alt="Jacky">
                     <h3 class="name-Jacky">Jacky</h3>
-                    <h4>[The Wizard Cat]</h4>
+                    <h4>[ The Wizard Cat ]</h4>
                     <ul>
-                        <li>/reduce : Shorten 4 longest alien words to 1 letter</li>
-                        <li>/binary : Cut 75% of alien words in half</li>
+                        <li><span class="purple-text-abil">/reduce</span> : Shorten 4 longest alien words to 1 letter</li>
+                        <li><span class="purple-text-abil">/binary</span> : Cut 75% of alien words in half</li>
                     </ul>
                 </div>
                 <div class="characterM blue bg-color-Pewya">
                     <img src="./images/cats/PewyaTN1.png" alt="Pewya">
                     <h3 class="name-Pewya">Pewya</h3>
-                    <h4>[The Cybersec Cat]</h4>
+                    <h4>[ The Cybersec Cat ]</h4>
                     <ul>
-                        <li>/security : +2 shields (max 10)</li>
-                        <li>/absorb : Invincible for 3 seconds</li>
+                        <li><span class="blue-text-abil">/security</span> : +2 shields (max 10)</li>
+                        <li><span class="blue-text-abil">/absorb</span> : Invincible for 3 seconds</li>
                     </ul>
                 </div>
                 <div class="characterM green bg-color-Natty">
                     <img src="./images/cats/NattyTN1.png" alt="Natty">
                     <h3 class="name-Natty">Natty</h3>
-                    <h4>[The Nature Cat]</h4>
+                    <h4>[ The Nature Cat ]</h4>
                     <ul>
-                        <li>/heal : Heal 3 hearts instantly</li>
-                        <li>/regen : Heal 5 hearts over 30 seconds</li>
+                        <li><span class="green-text-abil">/heal</span> : Heal 3 hearts instantly</li>
+                        <li><span class="green-text-abil">/regen</span> : Heal 5 hearts over 30 seconds</li>
                     </ul>
                 </div>
                 <div class="characterM yellow bg-color-Yoda">
                     <img src="./images/cats/YodaTN1.png" alt="Yoda">
                     <h3 class="name-Yoda">Yoda</h3>
-                    <h4>[The Lemon Cat]</h4>
+                    <h4>[ The Lemon Cat ]</h4>
                     <ul>
-                        <li>/push : Push aliens up 25%</li>
-                        <li>/teleport : 70% chance to send aliens back to top</li>
-                        <li>/reshuffle : Shuffle alien positions</li>
+                        <li><span class="yellow-text-abil">/push</span> : Push aliens up 25%</li>
+                        <li><span class="yellow-text-abil">/teleport</span> : 70% chance to send aliens back to top</li>
+                        <li><span class="yellow-text-abil">/reshuffle</span> : Shuffle alien positions</li>
                     </ul>
                 </div>
                 <div class="characterM orange bg-color-Arthur">
                     <img src="./images/cats/ArthurTN1.png" alt="Arthur">
                     <h3 class="name-Arthur">Arthur</h3>
-                    <h4>[The Timekeeper Cat]</h4>
+                    <h4>[ The Timekeeper Cat ]</h4>
                     <ul>
-                        <li>/freeze : Freeze aliens for 6 seconds</li>
-                        <li>/slow : Half speed for 10 seconds</li>
+                        <li><span class="orange-text-abil">/freeze</span> : Freeze aliens for 6 seconds</li>
+                        <li><span class="orange-text-abil">/slow</span> : Half speed for 10 seconds</li>
                     </ul>
                 </div>
                 <div class="characterM red bg-color-Power">
                     <img src="./images/cats/PowerTN1.png" alt="Power">
                     <h3 class="name-Power">Power</h3>
-                    <h4>[The Destroyer Cat]</h4>
+                    <h4>[ The Destroyer Cat ]</h4>
                     <ul>
-                        <li>/fork : Delete 4 random aliens</li>
-                        <li>/purge : 50% chance to delete each alien</li>
+                        <li><span class="red-text-abil">/fork</span> : Delete 4 random aliens</li>
+                        <li><span class="red-text-abil">/purge</span> : 50% chance to delete each alien</li>
                     </ul>
                 </div>
             </div>
@@ -139,39 +142,93 @@
         </div>
     </div>
 
-    <!-- Leaderboard Modal -->
-    <div id="leaderboardModal" class="modal hidden">
+    <!-- How to Play Modal (In-game) (Characters) -->
+    <div ondblclick="closeHowToPlayIG(), playSoundClick()" id="howToPlayModalIG" class="modal hidden">
         <div class="modal-content">
-            <span class="close-button" onclick="closeLeaderboard()">&times;</span>
-            <h2>Leaderboard (This is a Mockup!)</h2>
-            <!-- Filter Dropdown -->
-            <div class="filter-container">
-                <label for="player-filter">Filter by Players:</label>
-                <select id="player-filter" onchange="filterLeaderboard()">
-                    <option value="all">All Players</option>
-                    <option value="1">1 Player</option>
-                    <option value="2">2 Players</option>
-                    <option value="3">3 Players</option>
-                    <option value="4">4 Players</option>
-                </select>
+            <span class="close-button" onclick="closeHowToPlayIG(), playSoundClick()">&times;</span>
+            <div class="character-section">
+                <h3>Abilities!</h3>
+                <p class="description">Execute abilities by typing in commands using " / ", All abilities has 30s cooldown</p>
+                <div class="characterM white bg-color-Nulla">
+                    <img src="./images/cats/NullaTN1.png" alt="Nulla">
+                    <h3 class="name-Nulla">Nulla</h3>
+                    <h4>[ The Purity Cat ]</h4>
+                    <p>No power, default cat</p>
+                </div>
+                <div class="characterM purple bg-color-Jacky">
+                    <img src="./images/cats/JackyTN1.png" alt="Jacky">
+                    <h3 class="name-Jacky">Jacky</h3>
+                    <h4>[ The Wizard Cat ]</h4>
+                    <ul>
+                        <li><span class="purple-text-abil">/reduce</span> : Shorten 4 longest alien words to 1 letter</li>
+                        <li><span class="purple-text-abil">/binary</span> : Cut 75% of alien words in half</li>
+                    </ul>
+                </div>
+                <div class="characterM blue bg-color-Pewya">
+                    <img src="./images/cats/PewyaTN1.png" alt="Pewya">
+                    <h3 class="name-Pewya">Pewya</h3>
+                    <h4>[ The Cybersec Cat ]</h4>
+                    <ul>
+                        <li><span class="blue-text-abil">/security</span> : +2 shields (max 10)</li>
+                        <li><span class="blue-text-abil">/absorb</span> : Invincible for 3 seconds</li>
+                    </ul>
+                </div>
+                <div class="characterM green bg-color-Natty">
+                    <img src="./images/cats/NattyTN1.png" alt="Natty">
+                    <h3 class="name-Natty">Natty</h3>
+                    <h4>[ The Nature Cat ]</h4>
+                    <ul>
+                        <li><span class="green-text-abil">/heal</span> : Heal 3 hearts instantly</li>
+                        <li><span class="green-text-abil">/regen</span> : Heal 5 hearts over 30 seconds</li>
+                    </ul>
+                </div>
+                <div class="characterM yellow bg-color-Yoda">
+                    <img src="./images/cats/YodaTN1.png" alt="Yoda">
+                    <h3 class="name-Yoda">Yoda</h3>
+                    <h4>[ The Lemon Cat ]</h4>
+                    <ul>
+                        <li><span class="yellow-text-abil">/push</span> : Push aliens up 25%</li>
+                        <li><span class="yellow-text-abil">/teleport</span> : 70% chance to send aliens back to top</li>
+                        <li><span class="yellow-text-abil">/reshuffle</span> : Shuffle alien positions</li>
+                    </ul>
+                </div>
+                <div class="characterM orange bg-color-Arthur">
+                    <img src="./images/cats/ArthurTN1.png" alt="Arthur">
+                    <h3 class="name-Arthur">Arthur</h3>
+                    <h4>[ The Timekeeper Cat ]</h4>
+                    <ul>
+                        <li><span class="orange-text-abil">/freeze</span> : Freeze aliens for 6 seconds</li>
+                        <li><span class="orange-text-abil">/slow</span> : Half speed for 10 seconds</li>
+                    </ul>
+                </div>
+                <div class="characterM red bg-color-Power">
+                    <img src="./images/cats/PowerTN1.png" alt="Power">
+                    <h3 class="name-Power">Power</h3>
+                    <h4>[ The Destroyer Cat ]</h4>
+                    <ul>
+                        <li><span class="red-text-abil">/fork</span> : Delete 4 random aliens</li>
+                        <li><span class="red-text-abil">/purge</span> : 50% chance to delete each alien</li>
+                    </ul>
+                </div>
             </div>
-            <!-- Leaderboard Table -->
-            <table id="leaderboard">
-                <thead>
-                    <tr>
-                        <th>Team Name</th>
-                        <th>Player1</th>
-                        <th>Player2</th>
-                        <th>Player3</th>
-                        <th>Player4</th>
-                        <th>Waves Reached</th>
-                    </tr>
-                </thead>
-                <tbody id="leaderboard-body">
-                    <!-- Dynamic rows go here -->
-                </tbody>
-            </table>
+            <div class="alien-section">
+                <h3>Destroy Aliens!</h3>
+                <p class="alien-desc">Type a word that match with the prompt of each alien, then press enter to destroy them.</p>
+                <br>
+                <h3>Alien Variants</h3>
+                <div class="alien-box">
+                    <img src="./images/aliens/Rectangy.png" alt="Alien Variant 1">
+                    <img src="./images/aliens/Morphy.png" alt="Alien Variant 2">
+                    <img src="./images/aliens/Smoky.png" alt="Alien Variant 3">
+                </div>
+                <p class="alien-desc">This game includes various alien types with special traits and abilities- and each wave of aliens gets progressively more challenging. Stay alert!</p>
+            </div>
         </div>
+    </div>
+    
+    <div id="disconnectScreenSpam" class="disconnected-screen" style="display:none">
+        <span id="disconnectHead">Disconneted</span>
+        <span id="disconnectReason">Reason: ---</span>
     </div>
 </body>
 </html>
