--- a/public/client.html
+++ b/public/client.html
@@ -223,6 +223,9 @@
             </div>
         </div>
     </div>
+
+    <div id="star-container" class="star-container"></div>
+    
     <div id="disconnectScreenSpam" class="disconnected-screen" style="display:none">
         <span id="disconnectHead">Disconneted</span>
         <span id="disconnectReason">Reason: ---</span>
