--- a/public/client.html
+++ b/public/client.html
@@ -56,7 +56,9 @@
     <!-- How to Play Modal -->
     <div ondblclick="closeHowToPlay(), playSoundClick()" id="howToPlayModal" class="modal hidden">
         <div class="modal-content">
-            <span class="close-button" onclick="closeHowToPlay(), playSoundClick()">&times;</span>
+            <div class="close-btn-cover">
+                <span class="close-button" onclick="closeHowToPlay(), playSoundClick()">&times;</span>
+            </div>
             <img src="./images/Logo1.png" alt="Game Logo" class="modal-logo">
             <p class="description">Guardian of the Typurr is a fast-paced multiplayer typing game where you play cats and delete aliens. Type fast, survive longer, and reach high waves!</p>
             <div class="gif-section">
@@ -143,7 +145,9 @@
     <!-- How to Play Modal (In-game) (Characters) -->
     <div ondblclick="closeHowToPlayIG(), playSoundClick()" id="howToPlayModalIG" class="modal hidden">
         <div class="modal-content">
-            <span class="close-button" onclick="closeHowToPlayIG(), playSoundClick()">&times;</span>
+            <div class="close-btn-cover">
+                <span class="close-button" onclick="closeHowToPlayIG(), playSoundClick()">&times;</span>
+            </div>
             <div class="character-section">
                 <h3>Abilities!</h3>
                 <p class="description">Execute abilities by typing in commands using " / ", All abilities has 30s cooldown</p>
@@ -225,7 +229,7 @@
     </div>
 
     <div id="star-container" class="star-container"></div>
-    
+
     <div id="disconnectScreenSpam" class="disconnected-screen" style="display:none">
         <span id="disconnectHead">Disconneted</span>
         <span id="disconnectReason">Reason: ---</span>
