--- a/public/client.html
+++ b/public/client.html
@@ -63,7 +63,7 @@
             <p class="description">Guardian of the Typurr is a fast-paced multiplayer typing game where you play cats and delete aliens. Type fast, survive longer, and reach high waves!</p>
             <div class="gif-section">
                 <h3>Gameplay</h3>
-                <img src="./images/placeholder.gif" alt="How to Play GIF" class="howto-gif">
+                <video class="video-player-tag howto-video" playsinline="" loop="" autoplay="" src="./videos/Gameplay x8 (1min).mp4" controlslist="nodownload"></video>
             </div>
             <div class="character-section">
                 <h3>Characters</h3>
